force-app/main/default/objects/PricebookEntry/fields/Is_Hidden__c.field-meta.xml
<CustomField>
    <fullName>Is_Hidden__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Hides the price book entry from the opportunity products interface.</description>
    <label>Is Hidden</label>
    <type>Checkbox</type>
</CustomField>