force-app/main/default/objects/PricebookEntry/fields/New_Product_Addition__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Addition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>New Product Addition</label>
    <referenceTo>New_Product_Addition__c</referenceTo>
    <relationshipLabel>Price Book Entries</relationshipLabel>
    <relationshipName>Price_Book_Entries</relationshipName>
    <type>Lookup</type>
</CustomField>