force-app/main/default/objects/PricebookEntry/fields/Price_Book_Entry_id__c.field-meta.xml
<CustomField>
    <fullName>Price_Book_Entry_id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Price Book Entry id</label>
    <type>Text</type>
</CustomField>