force-app/main/default/objects/PricebookEntry/fields/Product_Internal_Id__c.field-meta.xml
<CustomField>
    <fullName>Product_Internal_Id__c</fullName>
    <formula>Product2.netsuite_conn__NetSuite_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Internal Id</label>
    <type>Text</type>
</CustomField>